update: design board